--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 - course: BA in Computer Science
   institute: Hunter College
   dates: August 2019- May 2022
-  logo: uob.png
+  logo: hunter.png
 
   
