--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,12 @@
 - course: BA in Computer Science
   institute: Hunter College
   dates: August 2019- May 2022
-  logo: uob.png
+  logo: hunter.png
+  
+- course: BS In Biological Sciences 
+  institute: University at Buffalo 
+  dates: January 2015- May 2018
+  logo: ub.png
+  
 
   
